After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766204 - sdp: rtpjpegdepay regression: Does not extract frame dimensions from SDP anymore
sdp: rtpjpegdepay regression: Does not extract frame dimensions from SDP anymore
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal blocker
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-10 07:15 UTC by George Chriss
Modified: 2016-05-11 06:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpjpegdepay debug log / Elphel 353L (5.85 KB, text/plain)
2016-05-10 07:15 UTC, George Chriss
  Details
sdp: parse sdp attributes in case that sdp message doesn't contain mickey message (1.25 KB, patch)
2016-05-10 12:08 UTC, Hyunjun Ko
none Details | Review
sdp: parse sdp attributes in case that sdp message doesn't contain mickey message (1.79 KB, patch)
2016-05-10 12:37 UTC, Hyunjun Ko
committed Details | Review
rtpjpegdepay debug log / eb47176b / working / Elphel 353L (6.15 KB, text/plain)
2016-05-10 16:54 UTC, George Chriss
  Details

Description George Chriss 2016-05-10 07:15:55 UTC
Created attachment 327557 [details]
rtpjpegdepay debug log / Elphel 353L

I have an rtspsrc-based Elphel 353L camera that I use with GStreamer.  Recent GStreamer releases fail to properly connect to the camera warning instead about an 'Invalid Dimension' of '0' for each JPEG image depay'd.

This appears to be a regression triggered by the following gst-plugins-good commit (discovered via git bisect):
commit 330003951392356b934625b6fb9498398edbd713
Author: Hyunjun Ko <zzoon.ko@samsung.com>
Date:   Wed Oct 7 18:51:25 2015 +0900

    rtspsrc: replace duplicated codes to call new base sdp apis
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745880

There was a lot of duplicated code removed in the above commit and I'm guessing the patch used to fix Bug 564437 ("rtpjpegdepay was unable to handle frame dimensions greater than 2040") hasn't found a functional replacement in the above merge.  Image dimensions under 2040 pixels are OK, above are not.  The Elphel 353L has a maximum frame size of 2592x1944.

Debug log attached.
Comment 1 Sebastian Dröge (slomo) 2016-05-10 08:37:06 UTC
Can you also get a debug log with older GStreamer that worked?
Comment 2 Hyunjun Ko 2016-05-10 09:57:35 UTC
IMHO, this is caused by the patch https://cgit.freedesktop.org/gstreamer/gst-plugins-base/commit/?id=28cf2f02e79676d9ecfb8806401f457d7b6f3b39

In gst_sdp_message_attributes_to_caps,


  res = gst_sdp_message_parse_keymgmt (msg, &mikey);
  if (mikey) {
    res = GST_SDP_EINVAL;
    if (gst_mikey_message_to_caps (mikey, caps))
      res = sdp_add_attributes_to_caps (msg->attributes, caps);
    gst_mikey_message_unref (mikey);
  }

sdp_add_attributes_to_caps is called only when the msg contains mikey message.

Should it call sdp_add_attributes_to_caps if there is no mickey, too?
Comment 3 Sebastian Dröge (slomo) 2016-05-10 10:50:56 UTC
Yes, like before. Do you want to prepare a patch?
Comment 4 Hyunjun Ko 2016-05-10 12:08:08 UTC
Created attachment 327582 [details] [review]
sdp: parse sdp attributes in case that sdp message doesn't contain mickey message

I believe "key-mgmt" attribute is always handled in mikey branch.

George, could you test with this patch?
I can't test same as your case.
Comment 5 Sebastian Dröge (slomo) 2016-05-10 12:14:12 UTC
Comment on attachment 327582 [details] [review]
sdp: parse sdp attributes in case that sdp message doesn't contain mickey message

Wouldn't it be better to just move the sdp_add_attributes_to_caps() out of the if?
Comment 6 Hyunjun Ko 2016-05-10 12:37:05 UTC
Created attachment 327588 [details] [review]
sdp: parse sdp attributes in case that sdp message doesn't contain mickey message

Yeah. I totally agree.
Comment 7 Sebastian Dröge (slomo) 2016-05-10 16:44:12 UTC
commit 825c150e9da3aac2afab8788fbb31c976905a5a1
Author: Hyunjun Ko <zzoon@igalia.com>
Date:   Tue May 10 21:34:53 2016 +0900

    sdp: parse sdp attributes in case that sdp message doesn't contain mikey message
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766204
Comment 8 George Chriss 2016-05-10 16:54:20 UTC
Created attachment 327600 [details]
rtpjpegdepay debug log / eb47176b / working / Elphel 353L
Comment 9 George Chriss 2016-05-10 17:25:35 UTC
Confirmed working on my Elphel camera with current gst-plugins-base/gst-plugins-good git master.  Thank you!