sdp: parse sdp attributes in case that sdp message doesn't contain mikey message

https://bugzilla.gnome.org/show_bug.cgi?id=766204